# patterns

./: .gitattributes  Cargo.toml  README.md  licence.txt  patterns.py  stats.ipynb  writeup.md
benches/: benches.rs
src/: helpers.rs  lib.rs  main.rs
