[package]
name = "patterns"
license = "MIT"
version = "0.4.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
readme = "README.md"

[dependencies]
rayon = "1.0.0"
fnv = "1.0.6"
clap = "2.30.0"

[[bin]]
name = "patterns"
path = "src/main.rs"
crate-type = ["bin"]

[profile.release]
lto = true
codegen-units = 1
