[package]
name = "patterns"
license = "MIT"
version = "0.7.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
readme = "README.md"

[dependencies]
rayon = "1.0.0"
fnv = "1.0.6"
clap = "2.30.0"

[lib]
name = "patterns"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "patterns"
path = "src/main.rs"
test = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
